@@ -77,7 +77,7 @@ php.date.timezone          = "America/Montreal"
 front.default_controller = "index"
 front.error_controller   = "error"
 
-view.setRenderEngine = "Layouts"
+view.engine = "Layouts"
 view.useLayout       = "Main"
 
 [development]
