@@ -18,16 +18,16 @@ class Peak_Exception extends Exception
 	/**
 	 * Errors messages
 	 */
-	const ERR_APP_CTRL_NOT_FOUND            = 'Application: controller %1$s not found.';
-	const ERR_CORE_EXTENSION_NOT_FOUND      = 'Core: extension %1$s not found.';
-	const ERR_CTRL_ACTION_NOT_FOUND         = 'Controller: action \'%1$s\' not found in %2$s.';
-	const ERR_CTRL_DEFAULT_ACTION_NOT_FOUND = 'Controller: action method by default not found.';
-	const ERR_CTRL_HELPER_NOT_FOUND         = 'Controller: helper \'%1$s\' not found.';
-	const ERR_ROUTER_URI_NOT_FOUND          = 'Router: request uri not found.';
-	const ERR_VIEW_ENGINE_NOT_SET           = 'View rendering engine not set. Use setRenderEngine() from Peak_View before trying to render application controller.';
-	const ERR_VIEW_HELPER_NOT_FOUND         = 'View: helper \'%1$s\' not found.';
-	const ERR_VIEW_SCRIPT_NOT_FOUND         = 'View: script file %1$s not found.';
-	const ERR_VIEW_THEME_NOT_FOUND          = 'View: theme \'%1$s\' folder not found.';
+	const ERR_APP_CTRL_NOT_FOUND            = 'Application controller %1$s not found.';
+	const ERR_CORE_EXTENSION_NOT_FOUND      = 'Core extension %1$s not found.';
+	const ERR_CTRL_ACTION_NOT_FOUND         = 'Controller action \'%1$s\' not found in %2$s.';
+	const ERR_CTRL_DEFAULT_ACTION_NOT_FOUND = 'Controller action method by default not found.';
+	const ERR_CTRL_HELPER_NOT_FOUND         = 'Controller helper \'%1$s\' not found.';
+	const ERR_ROUTER_URI_NOT_FOUND          = 'Request uri not found.';
+	const ERR_VIEW_ENGINE_NOT_SET           = 'View rendering engine not set. Use engine() from Peak_View before trying to render application controller.';
+	const ERR_VIEW_HELPER_NOT_FOUND         = 'View helper \'%1$s\' not found.';
+	const ERR_VIEW_SCRIPT_NOT_FOUND         = 'View script file %1$s not found.';
+	const ERR_VIEW_THEME_NOT_FOUND          = 'View theme \'%1$s\' folder not found.';
 	const ERR_DEFAULT                       = 'Request failed';
 	const ERR_CUSTOM                        = '%1$s';
 		
@@ -85,7 +85,7 @@ class Peak_Exception extends Exception
 		$debug = 'Files:<br />';
 		foreach($err_propagation as $line => $file) $debug .= '- '.$file.' (Line: '.$line.')<br />';
 
-		if((defined('DEV_MODE')) && (DEV_MODE)) {
+		if((defined('APPLICATION_ENV')) && (APPLICATION_ENV === 'development')) {
 			$debug .= '<br />Trace dump ['.$this->getTime().']:<pre>';
 			$debug .= print_r($trace,true);
 			$debug .= '</pre>';
